force-app/main/default/objects/Twilio__mdt/fields/AccountSid__c.field-meta.xml
<CustomField>
    <fullName>AccountSid__c</fullName>
    <label>AccountSid</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>