force-app/main/default/objects/Twilio__mdt/fields/From_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Phone_Number__c</fullName>
    <label>From Phone Number</label>
    <type>Phone</type>
</CustomField>